update version for maven.